<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>sdc-ri</artifactId>
        <groupId>org.somda.sdc</groupId>
        <version>1.1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>glue</artifactId>

    <name>SDC Glue</name>
    <description>
        SDCri is a set of Java libraries that implements a network communication framework conforming
        with the IEEE 11073 SDC specifications. This project implements the 11073-20702 SDC glue binding.
    </description>
    <url>http://www.somda.org</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>David Gregorczyk</name>
            <email>david.gregorczyk@web.de</email>
            <organizationUrl>https://gitlab.com/d.gregorczyk</organizationUrl>
        </developer>
        <developer>
            <name>Lukas Deichmann</name>
            <email>lukasdeichmann@gmail.com</email>
            <organizationUrl>https://gitlab.com/ldeichmann</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://gitlab.com/sdc-suite/sdc-ri.git</connection>
        <developerConnection>scm:git:git://gitlab.com/sdc-suite/sdc-ri.git</developerConnection>
        <url>https://gitlab.com/sdc-suite/sdc-ri/-/tree/develop</url>
      <tag>sdc-ri-1.0.0</tag>
  </scm>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.0.0-M4</version>
                <configuration>
                    <skipITs>false</skipITs>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.somda.sdc</groupId>
            <artifactId>dpws</artifactId>
            <version>1.1.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>org.somda.sdc</groupId>
            <artifactId>dpws</artifactId>
            <version>1.1.0-SNAPSHOT</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.somda.sdc</groupId>
            <artifactId>mdpws</artifactId>
            <version>1.1.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>org.somda.sdc</groupId>
            <artifactId>biceps</artifactId>
            <version>1.1.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>org.somda.sdc</groupId>
            <artifactId>biceps</artifactId>
            <version>1.1.0-SNAPSHOT</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.somda.sdc</groupId>
            <artifactId>test</artifactId>
            <version>1.1.0-SNAPSHOT</version>
            <scope>test</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/net.sourceforge.jregex/jregex -->
        <dependency>
            <groupId>net.sourceforge.jregex</groupId>
            <artifactId>jregex</artifactId>
            <version>1.2_01</version>
        </dependency>

    </dependencies>
</project>